tests/snapshots/tls_cli_integration__tls_mutual_exclusion_tests__ca_file_and_allow_invalid_mutual_exclusion.snap
---
source: tests/tls_cli_integration.rs
expression: stderr
---
error: the argument '--tls-ca-file <TLS_CA_FILE>' cannot be used with '--allow-invalid-certificate'

Usage: gold_digger --tls-ca-file <TLS_CA_FILE> --db-url <URL> --query <SQL> --output <FILE>

For more information, try '--help'.
