tests/snapshots/tls_cli_integration__tls_mutual_exclusion_tests__skip_hostname_and_allow_invalid_mutual_exclusion.snap
---
source: tests/tls_cli_integration.rs
expression: stderr
---
error: the argument '--insecure-skip-hostname-verify' cannot be used with '--allow-invalid-certificate'

Usage: gold_digger --insecure-skip-hostname-verify --db-url <URL> --query <SQL> --output <FILE>

For more information, try '--help'.
